# EfiSnake

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  highscore.c  highscore.h  main.c  menu.c  menu.h  snake.c  snake.h  util.c  util.h
tools/: build.sh
